Add static pages, create link to browse and catalog view from search, add top level link to browse catalogo

--- a/config/locales/blacklight.en.yml
+++ b/config/locales/blacklight.en.yml
@@ -1,3 +1,10 @@
 en:
   blacklight:
-    application_name: 'Blacklight'
+    application_name: 'The Digital Cicognara Library'
+
+    search:
+      form:
+        search:
+          placeholder: 'Search the collection...'
+    email:
+      recipient: 'sbrooke@princeton.edu'
