update contact email

--- a/config/locales/blacklight.en.yml
+++ b/config/locales/blacklight.en.yml
@@ -7,4 +7,4 @@ en:
         search:
           placeholder: 'Search the collection...'
     email:
-      recipient: 'sbrooke@princeton.edu'
+      recipient: 'cicognara@googlegroups.com'
